--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/img_bg_2.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/Capture.JPG);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -149,7 +149,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Hello!</h2>
 					<h3><STRONG>June 09th, 2022,</STRONG> <br> MMS Uma Mageshwari Mahal,Erode</h3>
-					<p>We invited you to celebrate our wedding Reception</p>
+					<p>We invite you to celebrate our wedding Reception</p>
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
