--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Nirosh weds Keerthika &mdash; </title>
+	<title>Nirosh weds Keerthika </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Nirosh weds Keerthika" />
 	<meta name="keywords" content="Nirosh weds Keerthika" />
@@ -71,7 +71,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-2">
-					<div id="fh5co-logo" style="font-size: 20px;"><a href="index.html">Reception<strong></strong></a></div>
+					<div id="fh5co-logo" style="font-size: 20px; font-family: 'Sacramento';"><a href="index.html">Reception<strong></strong></a></div>
 				</div>
 				<!-- <div class="col-xs-10 text-right menu-1">
 					<ul>
@@ -112,7 +112,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<br>
 							<br>
-							<h1 class="anim-typer" style="font-family:'love',Arial,sans-serif ; font-size: 100px; line-height: normal;">Nirosh  &amp; Keerthika</h1>
+							<h1 class="anim-typer" style="font-size: 90px; line-height: normal;">Nirosh &amp; Keerthika</h1>
 							<h2 style="font-family: sans-serif;">We Are Getting Married</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<!-- <p><a href="#" class="btn btn-default btn-sm">Save the date</a></p> -->
@@ -162,7 +162,7 @@
 						<img src="images/bride.jpg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-groom">
-						<h3>Nirosh</h3>
+						<h3>Nirosh Kumar</h3>
 						<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p> -->
 					</div>
 				</div>
@@ -560,7 +560,7 @@
 			</div>
 			<div class="row animate-box">
 				<div class="col-md-10 col-md-offset-1">
-					<form class="form-inline" id="google_sheet_form">
+					<form target="_blank" class="form-inline" id="google_sheet_form">
 						<div class="col-md-4 col-sm-4">
 							<div class="form-group">
 								<label for="name" class="sr-only">Name</label>
@@ -580,7 +580,7 @@
 							</div>
 						</div>
 
-						<div class="col align-self-center">
+						<div class="col-md-12 align-self-center">
 							<div class="form-group">
 								<label for="text" class="sr-only">Your Wish</label>
 								<input type="text" name="wish" class="form-control" id="wish" placeholder="Your Wish">
