--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 	 gtag('config', 'G-02GFDY31NF');
  </script>
+  <link rel="icon" type="image/x-icon" href="/images/favicon_1.png">
 	<meta property="og:title" content="Nirosh weds Keerthika"/>
 	<meta property="og:image" content="Nirosh weds Keerthika"/>
 	<meta property="og:url" content="Nirosh weds Keerthika"/>
@@ -58,6 +59,10 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+
+
+	<link rel="icon" type="image/x-icon" href="/path/to/favicon.ico">
+
 	
 	</head>
 	<body>
