--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<br>
 							<br>
-							<h1 class="anim-typer" style="font-size: 90px; line-height: normal;">Ragavendran &amp; Monika</h1>
+							<h1 class="anim-typer" style="font-size: 60px; line-height: normal;"> Monika &amp; <br> Ragavendran  </h1>
 							<h2 style="font-family: sans-serif;">We Are Getting Married</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<!-- <p><a href="#" class="btn btn-default btn-sm">Save the date</a></p> -->
@@ -651,7 +651,7 @@
 			<div class="row copyright" style="vertical-align: center;">
 				<div class="col-md-12 text-center">
 					<p style="padding-top:10px ;">
-						<small class="block">With love <a href="https://www.instagram.com/" target="_blank">Raga❤️</a> </small>
+						<small class="block">With love <a href="https://www.instagram.com/" target="_blank">Raga ❤️ Monika </a> </small>
 					</p>
 				</div>
 			</div>
