--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Nirosh weds Keerthika </title>
+	<title>Arun weds Showntharyaa </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Nirosh weds Keerthika" />
-	<meta name="keywords" content="Nirosh weds Keerthika" />
-	<meta name="author" content="Nirosh weds Keerthika" />
+	<meta name="description" content="Arun weds Showntharyaa" />
+	<meta name="keywords" content="Arun weds Showntharyaa" />
+	<meta name="author" content="Arun weds Showntharyaa" />
  <!-- Global site tag (gtag.js) - Google Analytics -->
  <script async src="https://www.googletagmanager.com/gtag/js?id=G-02GFDY31NF"></script>
  <script>
@@ -22,16 +22,15 @@
 
 	 gtag('config', 'G-02GFDY31NF');
  </script>
-  <link rel="icon" type="image/x-icon" href="/images/favicon_1.png">
-	<meta property="og:title" content="Nirosh weds Keerthika"/>
-	<meta property="og:image" content="Nirosh weds Keerthika"/>
-	<meta property="og:url" content="Nirosh weds Keerthika"/>
-	<meta property="og:site_name" content="Nirosh weds Keerthika"/>
-	<meta property="og:description" content="Nirosh weds Keerthika"/>
-	<meta name="twitter:title" content="Nirosh weds Keerthika" />
-	<meta name="twitter:image" content="Nirosh weds Keerthika" />
-	<meta name="twitter:url" content="Nirosh weds Keerthika" />
-	<meta name="twitter:card" content="Nirosh weds Keerthika" />
+	<meta property="og:title" content="Arun weds Showntharyaa"/>
+	<meta property="og:image" content="Arun weds Showntharyaa"/>
+	<meta property="og:url" content="Arun weds Showntharyaa"/> 
+	<meta property="og:site_name" content="Arun weds Showntharyaa"/>
+	<meta property="og:description" content="Arun weds Showntharyaa"/>
+	<meta name="twitter:title" content="Arun weds Showntharyaa" />
+	<meta name="twitter:image" content="Arun weds Showntharyaa" />
+	<meta name="twitter:url" content="Arun weds Showntharyaa" />
+	<meta name="twitter:card" content="Arun weds Showntharyaa" />
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
@@ -59,10 +58,6 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
-
-	<link rel="icon" type="image/x-icon" href="/path/to/favicon.ico">
-
 	
 	</head>
 	<body>
@@ -117,7 +112,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<br>
 							<br>
-							<h1 class="anim-typer" style="font-size: 90px; line-height: normal;">Nirosh &amp; Keerthika</h1>
+							<h1 class="anim-typer" style="font-size: 90px; line-height: normal;">Arun &amp; Showntharyaa</h1>
 							<h2 style="font-family: sans-serif;">We Are Getting Married</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<!-- <p><a href="#" class="btn btn-default btn-sm">Save the date</a></p> -->
@@ -133,12 +128,12 @@
 
 							<div title="Add to Calendar" class="addeventatc">
 								Add to Calendar
-								<span class="start">06/09/2022 05:00 PM</span>
-								<span class="end">06/09/2022 07:00 PM</span>
+								<span class="start">11/06/2024 06:00 PM</span>
+								<span class="end">11/06/2024 09:00 PM</span>
 								<span class="timezone">India Standard Time - Kolkata</span>
-								<span class="title">Nirosh weds Keerthika</span>
-								<span class="description">Reception of Nirosh weds Keerthika</span> 
-								<span class="location">MMS Uma Mageshwari Mahal,Erode, Tamil Nadu 638115. https://goo.gl/maps/sZ2dcf8JH7QFn5Gf8 </span>
+								<span class="title">Arun weds Showntharyaa</span>
+								<span class="description">Reception of Arun weds Showntharyaa</span> 
+								<span class="location">📍 Amman Arul Mahal, Karur Town. https://maps.app.goo.gl/Ft32HV6T87Mh5de18 </span>
 							</div>
 
 
@@ -157,7 +152,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Hello!</h2>
-					<h3 class="newheading"><STRONG>June 09th, 2022,</STRONG> <br> <br> 	MMS Uma Mageshwari Mahal, Erode</h3>
+					<h3 class="newheading"><STRONG>June 11th, 2024,</STRONG> <br> <br> 	📍 Amman Arul Mahal, Karur Town</h3>
 					<p>We invite you to celebrate our wedding Reception</p>
 				</div>
 			</div>
@@ -167,7 +162,7 @@
 						<img src="images/bride.jpg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-groom">
-						<h3>Nirosh Kumar</h3>
+						<h3>Arun</h3>
 						<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p> -->
 					</div>
 				</div>
@@ -177,7 +172,7 @@
 						<img src="images/groom.jpg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-bride">
-						<h3>Keerthika</h3>
+						<h3>Showntharyaa</h3>
 						<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p> -->
 					</div>
 				</div>
@@ -202,15 +197,20 @@
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
 									<h3 style="font-family:sans-serif;">Reception</h3>
+																			<p> 
+<img src="images/direction1.png" alt="Girl in a jacket" width="20" >
+												<a href="https://maps.app.goo.gl/Ft32HV6T87Mh5de18" style="color: #74f6a8;">Direction</a>
+	
+										</p>
 									<div class="event-col">
 										<i class="icon-clock"></i>
 										<span>6:00 PM</span>
-										<span>8:00 PM</span>
+										<span>9:00 PM</span>
 									</div>
 									<div class="event-col" >
 										<i class="icon-calendar"></i>
-										<span>June 09</span>
-										<span>Thrusday, 2022</span>
+										<span>June 11</span>
+										<span>Tuesday, 2024</span>
 									</div>
 									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
 								</div>
@@ -218,6 +218,12 @@
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
 									<h3>Marriage</h3>
+										<p> 
+
+											<img src="images/direction1.png" alt="Girl in a jacket" width="20" >
+	<a href="https://maps.app.goo.gl/MgNpmSSHyzxXpCgk9" style="color: #74f6a8;">Direction</a>
+	
+										</p>
 									<div class="event-col">
 										<i class="icon-clock"></i>
 										<span>6:00 AM</span>
@@ -225,8 +231,8 @@
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>June 10</span>
-										<span>Friday, 2022</span>
+										<span>June 12</span>
+										<span>Wednesday, 2022</span>
 									</div>
 									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
 								</div>
@@ -514,7 +520,7 @@
 						</span>
 						<div class="feature-copy">
 							<h3>Reception</h3>
-							<p>09-June 2022</p>
+							<p>11-June 2024</p>
 						</div>
 					</div>
 					<br>
@@ -524,7 +530,7 @@
 						</span>
 						<div class="feature-copy">
 							<h3>Address</h3>
-							<p><strong>MMS Uma Mageshwari Mahal </strong><br> Pudur, Erode, Tamil Nadu 638115.</p>
+							<p><strong>📍 Amman Arul Mahal, Karur Town </strong><br> Karur, Tamil Nadu.</p>
 						</div>
 					</div>
 					<br>
@@ -534,7 +540,7 @@
 						</span>
 						<div class="feature-copy">
 							<h3>Direction</h3>
-							<p><a href="https://goo.gl/maps/sZ2dcf8JH7QFn5Gf8">Click Here</a></p>
+							<p><a href="https://maps.app.goo.gl/Ft32HV6T87Mh5de18">Click Here</a></p>
 						</div>
 					</div>
 					<br>
@@ -543,110 +549,14 @@
 				<div class="col-md-7 animate-box" style="align-items: center; text-align: center;">
 					<!-- <div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); "> -->
 						<!-- <a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-video2"></i></a> -->
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7825.453954550963!2d77.72782653505627!3d11.281468982652077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba96fe67345f06b%3A0xe7c1301a17f04159!2sMMS%20Uma%20Mageshwari%20Mahal!5e0!3m2!1sen!2sin!4v1610796068563!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3916.879595146976!2d78.0412!3d10.972459899999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baa2ede34ec88fb%3A0xfd99fd80373c1e5d!2sAmman%20Arul%20Mahal%20A%2FC!5e0!3m2!1sen!2sin!4v1713333108251!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+						<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3916.879595146976!2d78.0412!3d10.972459899999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baa2ede34ec88fb%3A0xfd99fd80373c1e5d!2sAmman%20Arul%20Mahal%20A%2FC!5e0!3m2!1sen!2sin!4v1713333108251!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
 						<!-- <div class="overlay"></div> -->
 					<!-- </div> -->
 				</div>
 			</div>
 
 			
-		</div>
-	</div>
-
-
-	<div id="fh5co-started" class="fh5co-bg" style="background: linear-gradient(to right, #00C9FF, #92FE9D);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2 style="font-family:'love'; font-weight: 100;">Bestow your blessings!</h2>
-					<!-- <p></p> -->
-				</div>
-			</div>
-			<div class="row animate-box">
-				<div class="col-md-10 col-md-offset-1">
-					<form target="_blank" class="form-inline" id="google_sheet_form">
-						<div class="col-md-4 col-sm-4">
-							<div class="form-group">
-								<label for="name" class="sr-only">Name</label>
-								<input type="name" name="name" class="form-control" id="name" placeholder="Name" required>
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-4">
-							<div class="form-group">
-								<label for="email" class="sr-only">Email</label>
-								<input type="email" name="email" class="form-control" id="email" placeholder="Email">
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-4">
-							<div class="form-group">
-								<label for="phone" class="sr-only">Phone</label>
-								<input type="phone" name="phone" class="form-control" id="phone" placeholder="Phone">
-							</div>
-						</div>
-
-						<div class="col-md-12 align-self-center">
-							<div class="form-group">
-								<label for="text" class="sr-only">Your Wish</label>
-								<input type="text" name="wish" class="form-control" id="wish" placeholder="Your Wish">
-							</div>
-						</div>
-						<br>
-						<center>
-							<div class="col-6 col-md-4">   </div>
-							<div class="col-6 col-md-4"><button type="submit"  id="submit_btn" class="btn btn-default btn-block">Leave a message</button> </div>
-							<div class="col-6 col-md-4">  </div>
-
-						<div class="col-md-4">
-							
-						</div>
-					</center>
-					</form>
-					<script>
-						const scriptURL = "https://script.google.com/macros/s/AKfycbyaOrpdzBXIPbaOiZIHB5ddCFWavZcjbRFRWPcL0M1sQT1uXh-sjqjTqaroPUYnjDbN/exec"
-                        window.addEventListener('DOMContentLoaded', () => {
-                            $("#google_sheet_form").submit(function (e) {
-                                e.preventDefault()
-                                var number_of_checked_checkbox = 0;
-                
-                                if ((number_of_checked_checkbox == 0) ) {
-                                    const form = document.getElementById("google_sheet_form")
-                                    const buttonText = e.target.textContent;
-                                    const button_element = document.getElementById("submit_btn")
-                                    button_element.disabled = true
-                                    button_element.textContent = "Submitting..."
-                                    fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-                                        .then(response => {
-                                            button_element.classList.remove('btn-primary')
-                                            button_element.classList.add('btn-success')
-                                            button_element.textContent = "Done!"
-                                            if (response.status == 200) {
-                                                console.log('Success!', response)
-                                                swal("Good job!", "Your response has been recorded!", "success").then(val=>{
-                                                    form.reset()
-                                                    button_element.disabled=false
-                                                    button_element.textContent="Submit"
-                                                })
-                                            }
-                                        })
-                                        .catch(error => {
-                                            console.error('Error!', error.message)
-                                            button_element.classList.remove('btn-primary')
-                                            button_element.classList.add('btn-danger')
-                                            button_element.textContent = "Sorry"
-                                            swal('oh noes!', 'Error submitting data.Please try again later.', 'error')
-                                        })
-
-                                }
-
-                            });
-                        });
-
-
-					</script>
-
-				</div>
-			</div>
 		</div>
 	</div>
 
@@ -700,9 +610,9 @@
 
     // default example
     simplyCountdown('.simply-countdown-one', {
-        year: 2022,
+        year: 2024,
         month: 6,
-        day: 9
+        day: 11
     });
 
     $('#simply-countdown-losange').simplyCountdown({
