--- a/index.html
+++ b/index.html
@@ -536,6 +536,17 @@
 					<br>
 					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 						<span class="icon">
+							<i class="icon-phone"></i>
+						</span>
+						<div class="feature-copy">
+							<h3>Phone us</h3>
+							<!-- <p><strong>📍 Amman Arul Mahal, Karur Town </strong><br> Karur, Tamil Nadu.</p> -->
+							<p><a href="tel:+919535479189">+91 95354 79189</a></p>
+						</div>
+					</div>
+					<br>					
+					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
 							<i class="icon-direction"></i>
 						</span>
 						<div class="feature-copy">
@@ -566,7 +577,7 @@
 			<div class="row copyright" style="vertical-align: center;">
 				<div class="col-md-12 text-center">
 					<p style="padding-top:10px ;">
-						<small class="block">With love <a href="https://www.instagram.com/nirosh_hari/" target="_blank">Nir❤️sh</a> </small>
+						<small class="block">With love <a href="https://evorieainfotechpvtltd.com/" target="_blank"> Evoriea Team❤️</a> </small>
 					</p>
 				</div>
 			</div>
